feat: Enhance file upload functionality with roadmap context validation
- Added new methods in IFileService for uploading files with optional roadmap context.
- Implemented gRPC validation for roadmap existence and access permissions during file uploads.
- Introduced aggregate storage usage summary and per-roadmap usage breakdown methods.
- Created new proto files for roadmap lookups and file information retrieval.
- Migrated from SQL to MongoDB for file metadata storage, removing the previous SQL migration script.
- Updated application configuration for MongoDB and gRPC settings.
- Added unit tests for roadmap-related file uploads and storage usage calculations.